--- a/usage-extension/manifest.json
+++ b/usage-extension/manifest.json
@@ -10,9 +10,11 @@
     "128": "images/icon-128.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background-popup.js",
+    "type": "module"
   },
   "action": {
+    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
@@ -20,13 +22,5 @@
       "128": "images/icon-128.png"
     }
   },
-  "permissions": ["activeTab", "scripting"],
-  "commands": {
-    "_execute_action": {
-      "suggested_key": {
-        "default": "Ctrl+B",
-        "mac": "Command+B"
-      }
-    }
-  }
+  "permissions": ["activeTab", "scripting"]
 }
