Lots of tidying up and functionality

--- a/usage-extension/manifest.json
+++ b/usage-extension/manifest.json
@@ -4,10 +4,8 @@
   "description": "TODO",
   "version": "0.1",
   "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "32": "images/favicon.png",
+    "48": "images/favicon.png"
   },
   "background": {
     "service_worker": "background-popup.js",
@@ -16,11 +14,8 @@
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "images/icon-16.png",
-      "32": "images/icon-32.png",
-      "48": "images/icon-48.png",
-      "128": "images/icon-128.png"
+      "32": "images/favicon.png"
     }
   },
-  "permissions": ["activeTab", "scripting"]
+  "permissions": ["activeTab", "scripting", "storage", "downloads"]
 }
