--- a/usage-extension/manifest.json
+++ b/usage-extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Rancher - Container Ecosystem- Digital Ocean Usage",
-  "description": "TODO",
+  "description": "Show the Rancher's Container Ecosystem droplet usage per user",
   "version": "0.1",
   "icons": {
     "32": "images/favicon.png",
@@ -17,5 +17,10 @@
       "32": "images/favicon.png"
     }
   },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "run_at": "document_end",
+    "js":      ["scripts/droplet-page.js"]
+}],
   "permissions": ["activeTab", "scripting", "storage", "downloads"]
 }
