--- a/usage-extension/manifest.json
+++ b/usage-extension/manifest.json
@@ -18,7 +18,7 @@
     }
   },
   "content_scripts": [{
-    "matches": ["<all_urls>"],
+    "matches": ["https://cloud.digitalocean.com/*"],
     "run_at": "document_end",
     "js":      ["scripts/droplet-page.js"]
 }],
